# sergio_launch_files

./: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
launch/: middleware.launch  start.launch
launch/actuators/: all.launch  base.launch  etherCAT.launch
launch/diagnostics/: battery_manager.launch  diagnostics.launch  ntp_monitor.launch
launch/diagnostics/parameters/: battery_parameters.yaml  neglect_nodes.yaml
launch/interaction/: df_speech_recognition.launch  df_speech_recognition_dummy.launch  mobile_ui.launch  rosbridge_websocket.launch  speech_interpreter.launch  speech_recognition.launch  text_to_speech.launch  text_to_speech_festival.launch  text_to_speech_philips.launch
launch/localization/: loc_amcl.launch  loc_gmapping.launch  loc_odom.launch  localization.launch
launch/manipulation/: grasp_precompute_action.launch  grippers.launch  head_ref.launch  joint_trajectory_action.launch  joints_left.yaml  joints_right.yaml  manipulation.launch  torso.launch
launch/middleware/: base_navigation.launch  loc_amcl.launch  loc_odom.launch  localization.launch  middleware.launch
launch/navigation/: cb_base_navigation.launch  global_planner.launch  local_planner.launch
launch/sensors/: front_laser.launch
launch/simulator/: fast_simulator.launch  gazebo.launch
